--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@madzadev/audio-player": "^2.1.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.1.2"
